2002-08-18  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/workspace-grid.jl: new module from Michael
	Toomim <toomim@cs.berkeley.edu> to interpret the
	_NET_DESKTOP_LAYOUT wm-spec hints and provide two dimensional
	workspace commands

2002-08-03  John Harper  <jsh@unfactored.org>

	* sawfish/wm/windows.jl (dock-window-properties): fix typo.
	Patch from Greg Morris <gmorris@pscs.org>

2002-07-23  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/maximize.jl (window-unmaximized-position):
	patch from Claudio Bley <bley@cs.uni-magdeburg.de> to fix typo

2002-07-01  John Harper  <jsh@unfactored.org>

	* Makefile.in: invoke sawfish script directly when compiling

2002-06-30  John Harper  <jsh@unfactored.org>

	* sawfish/wm/placement/smart.jl (sp-padding): defaults to zero

2002-06-28  John Harper  <jsh@unfactored.org>

	* version 1.1

2002-06-17  John Harper  <jsh@unfactored.org>

	* sawfish/wm/util/display-window.jl
	(display-window-without-focusing): patch from merlin to recover
	"lost" windows

2002-05-28  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands/move-resize.jl (motion): when displaying
	logical size, use (or base 0) not 1 to get the correct result.
	Patch from merlin <merlin@merlin.org>

2002-05-26  John Harper  <jsh@unfactored.org>

	* sawfish/wm/placement/stagger.jl: respects workarea now. Fixes
	#74307

2002-05-24  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl (client-message-handler): don't
	select the new desktop when moving window after _NET_WM_DESKTOP

	* sawfish/wm/workspace.jl
	(send-window-to-workspace-from-first): added optional SELECT
	param

2002-05-13  John Harper  <jsh@unfactored.org>

	* sawfish/wm/gnome/integration.jl: admit defeat and go back to
	loading xterm module all the time

2002-05-11  John Harper  <jsh@unfactored.org>

	* sawfish/wm/gnome/integration.jl (gnome-use-capplet-changed):
	removed duplicate eval-when-compile

2002-05-10  John Harper  <jsh@unfactored.org>
