@@ -172,8 +172,16 @@
 (autoload-command 'set-window-viewport-linear:8 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
 (autoload-command 'set-viewport-linear:9 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
 (autoload-command 'set-window-viewport-linear:9 'sawfish.wm.commands.viewport-linear #:class 'deprecated)
-(autoload-command (quote move-viewport-next) (quote "viewport-extras") #:class 'viewport)
-(autoload-command (quote move-viewport-previous) (quote "viewport-extras") #:class 'viewport)
-(autoload-command (quote move-window-previous) (quote "viewport-extras") #:class 'viewport)
-(autoload-command (quote move-window-next) (quote "viewport-extras") #:class 'viewport)
+(autoload-command (quote move-viewport-next) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
+(autoload-command (quote move-viewport-previous) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
+(autoload-command (quote move-window-previous) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
+(autoload-command (quote move-window-next) (quote sawfish.wm.commands.viewport-extras) #:class 'viewport)
+(autoload-command (quote workspace-down) (quote sawfish.wm.ext.workspace-grid))
+(autoload-command (quote workspace-up) (quote sawfish.wm.ext.workspace-grid))
+(autoload-command (quote workspace-left) (quote sawfish.wm.ext.workspace-grid))
+(autoload-command (quote workspace-right) (quote sawfish.wm.ext.workspace-grid))
+(autoload-command (quote send-to-workspace-down) (quote sawfish.wm.ext.workspace-grid))
+(autoload-command (quote send-to-workspace-up) (quote sawfish.wm.ext.workspace-grid))
+(autoload-command (quote send-to-workspace-left) (quote sawfish.wm.ext.workspace-grid))
+(autoload-command (quote send-to-workspace-right) (quote sawfish.wm.ext.workspace-grid))
 ;;; ::autoload-end::
