@@ -1,5 +1,14 @@
 2002-08-18  John Harper  <jsh@unfactored.org>
 
+	* sawfish/wm/ext/edge-flip.jl (edge-flip-for-edge): use
+	workspace-grid module in workspace mode. Patch from Michael
+	Toomim <toomim@cs.berkeley.edu>
+
+	* sawfish/wm/ext/workspace-grid.jl (send-to-workspace-right):
+	added magic autoload comments
+
+2002-08-18  John Harper  <jsh@unfactored.org>
+
 	* sawfish/wm/ext/workspace-grid.jl: new module from Michael
 	Toomim <toomim@cs.berkeley.edu> to interpret the
 	_NET_DESKTOP_LAYOUT wm-spec hints and provide two dimensional
